Fix z-index on mobile primary nav

--- a/src/sass/partials/_primarynav.scss
+++ b/src/sass/partials/_primarynav.scss
@@ -50,6 +50,7 @@
         position: absolute;
         top: 40px;
         left: 0;
+        z-index: 10;
         background: #fff;
         box-shadow: 0 1rem 3rem rgba(0,0,0,.3);
         width: 100%;
